@startuml


class App
{
    main()
    start()
}

class Controller
{
    model: ToDoList
    obList: ObservableList<Item>
    fileChooser: FileChooser

    - fileLabel: Label
    - fileBox: VBox
    - displayOptionsBox: ComboBox<String>
    - tableView: TableView<Item>
    - descriptionColumn: TableColumn<Item, String>
    - dueDateColumn: TableColumn<Item, LocalDate>
    - completeColumn: TableColumn<Item, CheckBox>
    - descriptionTextField: TextField
    - dueDatePicker: DatePicker

    +initialize()

    'item functions
    +addItemClicked(ActionEvent)
    +removeItemClicker(ActionEvent)
    +clearAllClicked(ActionEvent)
    +editItemClicked(ActionEvent)

    'displayOptions
    +displayOptionsAction(ActionEvent)
    +displayAllItems()
    +displayIncompleteItems()
    +displayCompletedItems()
    +sortByDate()

    'save
    +saveBtnClicked(ActionEvent))
    'load
    +loadBtnClicked(ActionEvent))
    'help
    +helpBtnClicked(ActionEvent))

    'helpers
    +selectedRow()
    +displayItem(Item)
    +clearField()
}

class ToDoList
{
    -items: ArrayList<Item>

    'constructor
    +ToDoList()

    'getters
    +getAllItems(): ArrayList<Item>
    +inCompleteItems(): ArrayList<Item>
    +completeItems(): ArrayList<Item>

    'setters
    +addItem(Item)
    +removeItem(Item)
    +clearAll()
    +updateItem(Item, String, LocalDate)

    'save
    +save(File)
    +load(File): ArrayList<Item>

    -convertToDate(String): LocalDate
    +itemExists(Item): Boolean --**
}

class Item
{
    'private instance variables
    -description: SimpleStringProperty
    -dueDate: LocalDate
    -complete: CheckBox

    'constructor
    +Item(String, LocalDate)

    'getters
    +getDueDate(): LocalDate
    +getDescription(): String
    +getComplete(): CheckBox

    'setters
    +setDescription(String)
    +setDueDate(LocalDate)
    +setComplete(CheckBox)
}

class HelpScreenController
{
    -closeBtn: Button
    +closeBtnClicked((ActionEvent)
}

org.javafx.Application <|- App
App -- Controller
Controller *--> HelpScreenController
Controller *-> ToDoList
ToDoList *--> Item

note "Integrates ToDo.fxml" as N1
note "Integrates HelpScreen.fxml" as N2

Controller .. N1
Controller .. N2
HelpScreenController . N2

@enduml